# iam-temprole-creator

./: .gitignore  CLAUDE.md  CLEANUP.md  IMPLEMENTATION_SUMMARY.md  README.md  README_backup.md  budget-config.json  budget.json  cleanup.ps1  cleanup.py  cleanup.sh  cost_optimization_recommendations.md  create_budget_alert.py  create_cost_alerts.py  deploy.py  env.example  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: codeql.yml  sonarcloud.yml
infrastructure/: main.tf  terraform.tfstate  terraform.tfstate.backup
lambda_functions/: cleanup_handler.py  role_vendor_handler.py
lambda_functions/boto3-1.40.31.dist-info/: RECORD
lambda_functions/botocore-1.40.31.dist-info/: RECORD
lambda_functions/charset_normalizer-3.4.3.dist-info/: RECORD
lambda_functions/coverage/: tracer.cp312-win32.pyd
lambda_functions/coverage-7.10.6.dist-info/: RECORD
lambda_functions/iam_temprole_creator/: __init__.py  cli.py  config.py  database.py  models.py  policy_manager.py  role_vendor.py
lambda_functions/jmespath-1.0.1.dist-info/: RECORD
lambda_functions/markdown_it_py-4.0.0.dist-info/: RECORD
lambda_functions/moto-5.1.12.dist-info/: RECORD
lambda_functions/pygments-2.19.2.dist-info/: RECORD
lambda_functions/pytest-8.4.2.dist-info/: RECORD
lambda_functions/python_dotenv-1.1.1.dist-info/: RECORD
lambda_functions/typer-0.17.4.dist-info/: RECORD
lambda_functions/xmltodict-1.0.0.dist-info/: RECORD
policy_templates/: admin.json  break-glass.json  developer.json  read-only.json
src/iam_temprole_creator.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
tests/: conftest.py  test_integration.py  test_models.py  test_role_vendor.py
(+4 files in other folders)
